<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.csbgroup.myphr.Medicine.MedicineDetails">

        <!-- Medicine Name -->
        <EditText
            android:id="@+id/medicine_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@+id/notes_title"
            android:hint="@string/medname"
            android:textColor="#777777"
            android:textSize="26dp"
            android:textStyle="bold" />

        <!-- Medicine Description -->
        <EditText
            android:id="@+id/medicine_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/medicine_title"
            android:layout_marginStart="10dp"
            android:hint="@string/meddescription"
            android:inputType="textMultiLine"
            android:textColor="#777777" />

        <!-- Dose -->
        <TextView
            android:id="@+id/dose_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/medicine_info"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/meddose"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/medicine_dose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/dose_title"
            android:layout_alignBottom="@+id/dose_title"
            android:layout_alignStart="@+id/medicine_title"
            android:hint="@string/meddose"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="#777777" />

        <!-- Reminders -->
        <TextView
            android:id="@+id/reminders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/medicine_dose"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/reminders"
            android:textSize="18sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/radios2"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:id="@+id/daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily"
                android:textSize="17dp"
                android:textColor="#777777"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/everyotherday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textColor="#777777"
                android:layout_marginStart="12dp"
                android:text="@string/otherdays"
                android:visibility="gone" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/radios2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/reminders"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="5dp">

            <RadioButton
                android:id="@+id/general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:textSize="17dp"
                android:textColor="#777777"
                android:visibility="gone" />

            <RadioButton
                android:id="@+id/descriptive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="17dp"
                android:textColor="#777777"
                android:layout_marginStart="28dp"
                android:text="@string/descriptive"
                android:visibility="gone" />

        </RadioGroup>


        <EditText
            android:id="@+id/reminder_time_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/radios"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/remindertime"
            android:textColor="#777777"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reminder_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/radios"
            android:layout_marginStart="35dp"
            android:layout_toEndOf="@+id/reminder_time_title"
            android:hint="@string/hhmm"
            android:visibility="gone"
            android:inputType="text"
            android:textColor="#777777" />

        <EditText
            android:id="@+id/reminder_date_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_time_title"
            android:layout_marginStart="30dp"
            android:textStyle="bold"
            android:visibility="gone"
            android:text="@string/reminderdate"
            android:textColor="#777777"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/reminder_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_date_title"
            android:layout_alignBaseline="@+id/reminder_date_title"
            android:layout_alignBottom="@+id/reminder_date_title"
            android:layout_alignStart="@+id/reminder_time"
            android:hint="@string/ddmmyyyy"
            android:visibility="gone"
            android:inputType="text"
            android:textColor="#777777" />

        <!-- Notes -->
        <TextView
            android:id="@+id/notes_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/reminder_date"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/notes"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/medicine_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/notes_title"
            android:layout_marginStart="5dp"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:textColor="#777777" />

        <Switch
            android:id="@+id/reminder_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/reminders"
            android:layout_alignBottom="@+id/reminders"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp" />

        <Button
            android:id="@+id/delete"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:layout_below="@id/medicine_notes"
            android:backgroundTint="#F44336"
            android:textColor="#FFFFFF"
            android:layout_marginTop="5dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignStart="@+id/dose_title"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="5dp"
            app:srcCompat="@drawable/ic_medicine_dark"
            android:contentDescription="@string/medicine_logo" />

    </RelativeLayout>
</ScrollView>