<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/medicine_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.csbgroup.myphr.Medicine.Medicine">

    <LinearLayout
        android:id="@+id/no_meds"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="5"
        android:textAlignment="center">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:srcCompat="@drawable/ic_medicine_dark"
            android:contentDescription="@string/medicine_logo"
            android:layout_weight="2"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_meds"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:layout_weight="3"/>
    </LinearLayout>

    <ListView
        android:id="@+id/medicine_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/med_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp"
        android:src="@drawable/add"
        app:fabSize="normal"
        app:backgroundTint="@color/colorAccent" />


</RelativeLayout>
