...
    <string name="medication">Medication</string>
    <string name="calendar">Calendar</string>
    <string name="appointments">Appointments</string>
    <string name="measurements">Measurements</string>

    // Settings and Details strings
    <string name="edit_icon">Edit Icon</string>
    <string name="reminders">Reminders</string>
    <string name="notes">Notes</string>

    // Calendar strings
    <string name="last_date_arrow">Last Date Arrow</string>
    <string name="next_date_arrow">Next Date Arrow</string>
...
    <string name="cname">Name</string>
    <string name="cnotes">Notes</string>
    <string name="cemail">Email</string>
    <string name="cphone">Phone</string>

    // Medicine strings
    <string name="medtitle">Add a Medication</string>
    <string name="medmessage">Enter the details for your new medication:</string>
    <string name="medmessage2">You can schedule reminders later.</string>
    <string name="medname">Name</string>
    <string name="meddescription">Description</string>
    <string name="mednotes">Notes</string>
    <string name="meddose">Dose</string>
...
